@@ -15,6 +15,7 @@ Deprecated and removed features, and other changes affecting compatibility:
 
 The following bugs are resolved with this release:
 
+  [12154] Do not fail DNS resolution for CNAMEs which are not host names
   [25812] Libio vtable protection is sometimes only partially enforced
   [28838] FAIL: elf/tst-p_align3
   [28846] CMSG_NXTHDR may trigger -Wstrict-overflow warning
@@ -53,6 +54,7 @@ The following bugs are resolved with this release:
   [29214] nptl: pthread_setcanceltype fails to set type
   [29225] network: Mistyped define statement in socket/sys/socket.h in
     line 184
+  [29305] Conserve NSS buffer space during DNS packet parsing
   [29415] nscd: Fix netlink cache invalidation if epoll is used
   [29446] _dlopen now ignores dl_caller argument in static mode
   [29490] alpha: New __brk_call implementation is broken
